Add test data for MAYOTTE_CLEAN

--- a/src/config/bb_test.yaml
+++ b/src/config/bb_test.yaml
@@ -38,6 +38,19 @@ MAYOTTE:
   - 8566000.0
   - 515000.0
   - 8568000.0
+MAYOTTE_CLEAN:
+- - 523000.0
+  - 8586000.0
+  - 525000.0
+  - 8588000.0
+- - 512000.0
+  - 8592000.0
+  - 514000.0
+  - 8594000.0
+- - 513000.0
+  - 8566000.0
+  - 515000.0
+  - 8568000.0
 REUNION:
 - - 343000.0
   - 7686000.0
