add bb for saint martin

--- a/src/config/bb_test.yaml
+++ b/src/config/bb_test.yaml
@@ -64,3 +64,13 @@ REUNION:
   - 7663000.0
   - 324000.0
   - 7664000.0
+SAINT-MARTIN:
+- - 496600.0
+  - 1997100.0
+  - 497200.0
+  - 1997600.0
+- - 493430.0
+  - 1997700.0
+  - 493900.0
+  - 1998100.0
+  
