--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pre-commit==3.7.1
-geopandas==1.0.0
-astrovision==0.13.2
-scipy==1.12.0
-ruff==0.4.10
+pre-commit>=3.7.1
+geopandas>=1.0.0
+astrovision>=0.14.1
+scipy>=1.12.0
+ruff>=0.4.10
