--- a/argo-workflows/pipeline-workflow.yaml
+++ b/argo-workflows/pipeline-workflow.yaml
@@ -9,46 +9,15 @@ spec:
     parameters:
       - name: preprocessing-conf-list
         value: '[
-            { "src": "PLEIADES", "dep": "MAYOTTE", "year": "2022", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "250", "from_s3": "0"},
-            { "src": "PLEIADES", "dep": "MAYOTTE", "year": "2022", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "125", "from_s3": "0"},
-            { "src": "PLEIADES", "dep": "MAYOTTE", "year": "2020", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "250", "from_s3": "0"},
-            { "src": "PLEIADES", "dep": "MAYOTTE", "year": "2020", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "125", "from_s3": "0"},
-            { "src": "PLEIADES", "dep": "MAYOTTE", "year": "2019", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "250", "from_s3": "0"},
-            { "src": "PLEIADES", "dep": "MAYOTTE", "year": "2019", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "125", "from_s3": "0"},
-            { "src": "PLEIADES", "dep": "MAYOTTE", "year": "2017", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "250", "from_s3": "0"},
-            { "src": "PLEIADES", "dep": "MAYOTTE", "year": "2017", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "125", "from_s3": "0"},
-
-            { "src": "PLEIADES", "dep": "GUADELOUPE", "year": "2022", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "250", "from_s3": "0"},
-            { "src": "PLEIADES", "dep": "GUADELOUPE", "year": "2022", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "125", "from_s3": "0"},
-            { "src": "PLEIADES", "dep": "GUADELOUPE", "year": "2020", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "250", "from_s3": "0"},
-            { "src": "PLEIADES", "dep": "GUADELOUPE", "year": "2020", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "125", "from_s3": "0"},
-            { "src": "PLEIADES", "dep": "GUADELOUPE", "year": "2019", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "250", "from_s3": "0"},
-            { "src": "PLEIADES", "dep": "GUADELOUPE", "year": "2019", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "125", "from_s3": "0"},
-            { "src": "PLEIADES", "dep": "GUADELOUPE", "year": "2018", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "250", "from_s3": "0"},
-            { "src": "PLEIADES", "dep": "GUADELOUPE", "year": "2018", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "125", "from_s3": "0"},
-
-            { "src": "PLEIADES", "dep": "MARTINIQUE", "year": "2022", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "250", "from_s3": "0"},
-            { "src": "PLEIADES", "dep": "MARTINIQUE", "year": "2022", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "125", "from_s3": "0"},
-            { "src": "PLEIADES", "dep": "MARTINIQUE", "year": "2018", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "250", "from_s3": "0"},
-            { "src": "PLEIADES", "dep": "MARTINIQUE", "year": "2018", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "125", "from_s3": "0"},
-
-            { "src": "PLEIADES", "dep": "REUNION", "year": "2022", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "250", "from_s3": "0"},
-            { "src": "PLEIADES", "dep": "REUNION", "year": "2022", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "125", "from_s3": "0"}
-
-            { "src": "PLEIADES", "dep": "SAINT-MARTIN", "year": "2024", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "250", "from_s3": "0"},
-            { "src": "PLEIADES", "dep": "SAINT-MARTIN", "year": "2024", "nb_bands": "3", "labeler": "BDTOPO", "task": "segmentation", "tile_size": "125", "from_s3": "0"}
+            { "src": "PLEIADES", "dep": "MAYOTTE", "year": "2023", "nb_bands": "3", "labeler": "COSIA", "task": "segmentation", "tile_size": "250", "from_s3": "0"}
             ]'
   templates:
     # Entrypoint DAG template
     - name: main
       dag:
         tasks:
-          # Task 0: Start pipeline
-          - name: start-pipeline
-            template: start-pipeline-wt
           # Task 1: Preprocess images
           - name: run-preprocessing-with-params
-            dependencies: [ start-pipeline ]
             template: run-preprocessing-wt
             arguments:
               parameters:
@@ -71,16 +40,7 @@ spec:
             # Pass the inputs to the task using "withParam"
             withParam: "{{workflow.parameters.preprocessing-conf-list}}"
 
-    # Now task container templates are defined
-    # Worker template for task 0 : start-pipeline
-    - name: start-pipeline-wt
-      inputs:
-      container:
-        image: busybox
-        command: [ sh, -c ]
-        args: [ "echo Starting pipeline" ]
-
-    # Worker template for task-1 : train model with params
+    # Worker template
     - name: run-preprocessing-wt
       inputs:
         parameters:
@@ -93,8 +53,8 @@ spec:
           - name: tile_size
           - name: from_s3
       container:
-        image: inseefrlab/satellite-images-dev:v0.0.4
-        imagePullPolicy: Always
+        image: inseefrlab/satellite-images-dev:v0.0.6
+        imagePullPolicy: IfNotPresent
         command: ["/bin/bash", -c]
         args: ["git clone https://github.com/InseeFrLab/satellite-images-preprocess.git &&
               cd satellite-images-preprocess/ &&
