--- a/argo-workflows/split-data-very-raw.yaml
+++ b/argo-workflows/split-data-very-raw.yaml
@@ -42,14 +42,15 @@ spec:
           - name: tile_size
           - name: output_dir
       container:
-        image: inseefrlab/satellite-images-dev:v0.0.6
+        image: inseefrlab/onyxia-vscode-python:py3.12.9
         imagePullPolicy: IfNotPresent
         command: ["/bin/bash", "-c"]
-        args: [
-          "git clone https://github.com/InseeFrLab/satellite-images-preprocess.git &&
-           cd satellite-images-preprocess/ &&
-           python src/split_raw_images.py --department {{inputs.parameters.department}} --year {{inputs.parameters.year}} --tile_size {{inputs.parameters.tile_size}} --output_dir {{inputs.parameters.output_dir}}"
-        ]
+        args:
+          - |
+            git clone https://github.com/InseeFrLab/satellite-images-preprocess.git &&
+            cd satellite-images-preprocess/ &&
+            uv sync &&
+            uv run src/split_raw_images.py --department {{inputs.parameters.department}} --year {{inputs.parameters.year}} --tile_size {{inputs.parameters.tile_size}} --output_dir {{inputs.parameters.output_dir}}
         env:
           - name: AWS_ACCESS_KEY_ID
             valueFrom:
